# instant-xml

./: .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
instant-xml/: Cargo.toml
instant-xml-macros/: Cargo.toml
instant-xml-macros/src/: case.rs  de.rs  lib.rs  meta.rs  se.rs  ser.rs
instant-xml-macros/src/meta/: base.rs  container.rs  field.rs  mod.rs  namespace.rs  variant.rs
instant-xml/benches/: decode.rs
instant-xml/src/: any_element.rs  de.rs  impls.rs  lib.rs  parse.rs  ser.rs
instant-xml/tests/: all.rs  any_element.rs  attr-no-ns.rs  attributes.rs  chrono.rs  de-direct.rs  de-enum-attr-ns.rs  de-nested.rs  de-ns.rs  direct-no-value.rs  direct.rs  entities.rs  escaping.rs  force-prefix.rs  forward-enum.rs  generics.rs  lifetime.rs  number.rs  option.rs  rename.rs  scalar-enum.rs  scalar.rs  ser-attr-ns.rs  ser-child-ns.rs  ser-named.rs  ser-nested.rs  ser-unit.rs  transparent.rs  unnamed.rs  vec.rs  with.rs  wrapped-enum.rs
