[package]
name = "instant-xml-macros"
version = "0.6.2"
edition = "2021"
rust-version = "1.68"
workspace = ".."
license = "Apache-2.0 OR MIT"
description = "Procedural macros for instant-xml"
documentation = "https://docs.rs/instant-xml-macros"
repository = "https://github.com/djc/instant-xml"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "2", features = ["full"] }
