[package]
name = "instant-xml"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
workspace = ".."
license = "Apache-2.0 OR MIT"

[dependencies]
chrono = { version = "0.4.23", optional = true }
macros = { package = "instant-xml-macros", version = "0.1", path = "../instant-xml-macros" }
thiserror = "1.0.29"
xmlparser = "0.13.3"

[dev-dependencies]
similar-asserts = "1.4.2"
