[package]
name = "instant-xml"
version = "0.6.1"
edition = "2021"
rust-version = "1.71"
workspace = ".."
license = "Apache-2.0 OR MIT"
description = "A more rigorous way to map XML to Rust types"
documentation = "https://docs.rs/instant-xml"
repository = "https://github.com/djc/instant-xml"
readme = "../README.md"

[dependencies]
chrono = { version = "0.4.23", optional = true }
macros = { package = "instant-xml-macros", version = "0.6", path = "../instant-xml-macros" }
thiserror = "2.0.3"
xmlparser = "0.13.3"

[dev-dependencies]
bencher = "0.1.5"
serde = { version = "1", features = ["derive"] }
similar-asserts = "1.4.2"

[[bench]]
name = "decode"
harness = false
